# CMAKE_find_package_Example

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
libs/CEDOLib/: CEDOLibConfig.cmake
libs/CEDOLib/src/: CEDOLib_global.h  CMakeLists.txt  cedolib.cpp  cedolib.h
